apps/frontend/static_src/scss/components/base.scss
html {
    font-family: $font-family-base;
    font-size: calc(($base-font-size / 16px) * 100%);
    line-height: $base-line-height;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    color-scheme: normal;
}

body {
    background-color: light-dark($color--page-bg, $color--off-black);
    color: light-dark($color--off-black, $color--light-grey);

    &.no-scroll {
        overflow-y: hidden;
    }
}

a {
    color: light-dark($color--primary, $color--light-teal);
    transition: color $transition;

    &:hover,
    &:focus {
        color: light-dark($color--black, $color--white);
    }
}

svg {
    fill: currentColor;
}

